--- a/homework/math-304-hw10.tex
+++ b/homework/math-304-hw10.tex
@@ -76,75 +76,20 @@
 %{\bf Row:}\hrulefill\
 \vspace{0.1in}
 
-\noindent  Homework 10  has questions 1 through  \numquestions \/ with a total of of  \numpoints\/  points. The point
+\noindent  Homework 11  has questions 1 through  \numquestions \/ with a total of of  \numpoints\/  points. The point
 value for each question or part of a question is in the box following each question or part of a question.
 This work is due \textbf{Saturday 20 April  } at 11:59 \PM.  
 
-In class (and in our textbook), we applied the Gram-Schmidt process to the functions $x \mapsto 1$, $x \mapsto x, x \mapsto x^2, \dots$ using the interval $[-1,1]$ and an inner product
-defined as 
-\begin{equation*}
-\langle f,g \rangle = \int_{-1}^1 f(x) g(x) \, \mathrm{d} x.
-\end{equation*}
-For this homework, we'll do the same, except that we will change the inner product to 
-\begin{equation*}
- \langle f,g \rangle = \int_{-1}^1 \sqrt{1-x^2} f(x) g(x) \, \mathrm{d} x.
-\end{equation*}
-This inner product has all the required properties and the weight function satisfies the requirements on page 205 of our textbook.
-
-Doing the Gram-Schimidt process by hand for these functions will develop strength and  character, but it's tedious and challenging to get correct. The result of doing so is
-\begin{align*}
-C_0(x) &= \frac{\sqrt{2}}{\sqrt{\uppi}}, \\
-C_1(x) &= \frac{\sqrt{8}}{\sqrt{\uppi}} x,\\
-C_2(x) &= \frac{\sqrt{2}}{\sqrt{\uppi}} (2x-1)(2x+1), \\
-C_3(x) &= \frac{\sqrt{32}}{\sqrt{\uppi}} x(2x^2-1), \\
-C_4(x) &= \frac{\sqrt{2}}{\sqrt{\uppi}} (4 x^2 - 2 x - 1)(4x^4+2x+1). 
-\end{align*}
-These functions have been normalized so that $ \langle C_k, C_\ell  \rangle  = \begin{cases} 0 & k \neq \ell \\ 1 & k=\ell \end{cases}$.  These functions are a special case
-of the well-known \emph{ultraspherical} polynomials that are known as the \emph{Chebyshev polynomials of the second kind}. The zeros of $C_4$ are 
-\begin{equation*}
-x_0 =  \operatorname{-}\left( \frac{\sqrt{5}\operatorname{+}1}{4}\right) ,
-x_1 = \operatorname{-}\left( \frac{\sqrt{5}\operatorname{-}1}{4}\right),
-x_2 = \frac{\sqrt{5}\operatorname{-}1}{4}\operatorname{,}
-x_3 = \frac{\sqrt{5}\operatorname{+}1}{4}
- \end{equation*}
-
 \begin{questions}
 
-\question[10] These polynomials can be defined recursively by 
-\begin{equation*}
- C_{n+1}(x) = 2  x \, C_n(x) - C_{n-1} (x),
-\end{equation*}
-and $C_0(x) = \frac{\sqrt{2}}{\sqrt{\uppi}},  C_1(x) = \frac{\sqrt{8}}{\sqrt{\uppi}} x$.  Write a Julia function \texttt{ ultraspherical(n::Integer, x::Number)}  that evaluates these polynomials. 
-
-
-
-\question[10]  Check that $C_{10}(0.23) \approx 0.6818339026993401$  and  $C_{15}(-0.19) \approx 0.06737434860812452$
-
-\question[10] Use Gadfly to graph $C_0, C_1, C_2, C_3$, and $C_4$ on the interval $[-1,1]$.
-
-
-\question [10] As we did for the Legendre polynomials, let's build a quadrature rule whose knots are the zeros of $C_4$. The corresponding weights are
-
-\begin{equation*}
- \ensuremath{\mathrm{w0}}\operatorname{=}\operatorname{-}\left( \frac{\left( \sqrt{5}\operatorname{-}5\right)  \ensuremath{\pi} }{40}\right) \operatorname{,}\ensuremath{\mathrm{w1}}\operatorname{=}\frac{\left( \sqrt{5}\operatorname{+}5\right)  \ensuremath{\pi} }{40}\operatorname{,}\ensuremath{\mathrm{w2}}\operatorname{=}\frac{\left( \sqrt{5}\operatorname{+}5\right)  \ensuremath{\pi} }{40}\operatorname{,}\ensuremath{\mathrm{w3}}\operatorname{=}\operatorname{-}\left( \frac{\left( \sqrt{5}\operatorname{-}5\right)  \ensuremath{\pi} }{40}\right) 
-\end{equation*}
-The resulting quadrature rule is
+\question [10] A sequence $c$ is defined recursively by
 \begin{equation}
- \int_{-1}^1 \sqrt{1-x^2} F(x) \, \mathrm{d} x \approx \sum_{k=0}^3 w_k F(x_k).
+  c_n = \begin{cases} 0 & n = 0 \\ \frac{1}{2} c_{n-1} + 1 & n \geq 1 \end{cases}.
 \end{equation}
-Write a Julia function that implements this quadrature rule.
-
-\question [10] Show that this quadrature rule is pretty close to exact when $F$ is a polynomial of degree seven or less.  To do this, test the rule on each of the following:
-\begin{align*}
-&\int_{-1}^{1}{\sqrt{1-x^2}\;\mathrm{d}x}={{\pi}\over{2}} , \\
-&\int_{-1 }^{1}{x\,\sqrt{1-x^2}\;\mathrm{d}x}=0 , \\
-&\int_{-1}^{1}{x^2\,\sqrt{1-x^2}\;\mathrm{d}x}=  {{\pi}\over{8}} , \\
- &\int_{-1}^{1}{x^3\,\sqrt{1-x^2}\;\mathrm{d}x}=0 , \\
- &\int_{-1 }^{1}{x^4\,\sqrt{1-x^2}\;\mathrm{d}x}={{\pi}\over{16}} , \\
-  &\int_{-1}^{1}{x^5\, \sqrt{1-x^2}\;\mathrm{d}x}=0 , \\
-   &\int_{-1}^{1}{x^6\,\sqrt{1-x^2}\;\mathrm{d}x}={{5\,\pi  }\over{128}} , \\
-   &\int_{-1}^{1}{x^7\,\sqrt{1-x^2}\;\mathrm{d}x}=0. 
- \end{align*}
-
+Find a formula for the generating function for the sequence $c$. That is, find a formula for $\sum_{k=0}^\infty c_n z^n$. You
+might like to use the fact that
+\begin{equation}
+  
+\end{equation}
 \end{questions}
 \end{document}
