--- a/handout/orthogonal_hall_of_fame.tex
+++ b/handout/orthogonal_hall_of_fame.tex
@@ -7,7 +7,7 @@
 \usepackage{enumerate}
 \usepackage{cancel}
 \usepackage{fontawesome5}
-%\usepackage{fourier}
+\usepackage{fourier}
 \usepackage{upgreek}
 %\raggedright
 
@@ -124,7 +124,7 @@ The solution is
 \end{handlist}
 \end{frame}
 
-\begin{frame}{A Hall of Fame Orthogonal set}
+\begin{frame}{A hall of fame orthogonal set}
 
 \textbf{Fact} For $k, \ell \in \integers$, we have
 \begin{align*}
