--- a/Julia-notebooks/DFT2.ipynb
+++ b/Julia-notebooks/DFT2.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Discrete Fourier transform\n",
     "_CYBR 304 & MATH 420_ <br>\n",
@@ -139,8 +141,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Not only is the FFTW method faster, it's also more accurate. The value returned by `fft` is correct to all decimal places, but our poky slow method differs slightly from the true value. Let's abandon our slow and not particularly accurate code.\n",
     "\n",
@@ -5069,8 +5073,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Here is a graph of the difference between the function $F$ and the function we reconstructed from the DFT. It's a crazy looking graph, but the differences have a magnitude that are of the order $10^{-14}$. So for this case, our code seems to work OK."
    ]
@@ -9133,7 +9139,7 @@
    "metadata": {},
    "source": [
     "Let's have some fun. To the function $x \\mapsto  -8 \\sin(x) + 10 \\cos(2 x)$, let's add some randomness. If we were in a music studio recording, the function\n",
-    " $x \\mapsto  -8 \\sin(x) + 10 \\cos(2 x)$ represents to a sound with different amplitudes and two frequences one octave apart. And the randomess would represent a higher\n",
+    " $x \\mapsto  -8 \\sin(x) + 10 \\cos(2 x)$ represents to a sound with different amplitudes and two frequencies one octave apart. And the randomness would represent a higher\n",
     " frequency noise. To get consistent results from our function $F$, we'll set the seed for the random number generator. Here is our function"
    ]
   },
@@ -14063,8 +14069,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "We can get rid of the high frequency noise by reducing the magnitude of the value of the DFT for the higher frequency terms.  We'll do this by appending a function to our function that multplies the the discrete Fourier coeficients"
    ]
@@ -14101,8 +14109,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Here is a simple 'filter' that sets all the coeficients that are larger than 10 to zero."
    ]
@@ -23716,8 +23726,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "If we retain all frequencies less than 30, our reconstructed function is a bit more \"wiggly.\""
    ]
